<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cultural Wealth</string>

    <!-- Login -->
    <string name="login">Log In</string>
    <string name="signin">Sign Up</string>
    <string name="google">Login With Google</string>
    <string name="mail">Enter mail</string>
    <string name="password">Enter password</string>
    <string name="guest">Guest</string>

    <!-- Gallery -->
    <string name="monuments">Monuments</string>
    <string name="paintings">Paintings</string>
    <string name="characters">Characters</string>
    <string name="loaded">There is no heritage yet</string>
    <string name="noMonu">There is no monument yet</string>
    <string name="noPaint">There is no painting yet</string>
    <string name="noChar">There is no character yet</string>

    <!-- Settings -->
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="music">Music Volume</string>
    <string name="effect">Effect Volume</string>
    <string name="language">Language</string>

    <!-- Popup Goals -->
    <string name="achievements">Achievements</string>
    <string name="missions">Missions</string>

    <!-- Home -->
    <string name="play">Play</string>
    <string name="shop">Shop</string>

    <!-- Registration -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="passwordR">Password</string>
    <string name="BtnConfirm">Confirm</string>
    <string name="msgRegistration">Are you already registered? Log in.</string>

    <!-- Popup Dialogs -->
    <string name="submit">Submit</string>
    <string name="InsertUser">Enter your username here</string>
    <string name="username">Username</string>

    <!-- Ranking popup -->
    <string name="RankName">User Name</string>
    <string name="RankPoints">Points</string>
    <string name="RankPositions">Rank</string>
    <string name="RankTitle">Ranking</string>

    <!-- RecyclerView Gallery -->
    <string name="loading">Loading...</string>

    <!-- Game Activity -->
    <string name="exit">Exit</string>
    <string name="esci">Do you want to exit the game?</string>
    <string name="save">Exit&amp;Save</string>

    <string name="inizia_turno">Roll\nDice</string>
    <string name="fine_turno">End Turn</string>
    <string name="info">info</string>
    <string name="compra">Buy</string>
    <string name="rank_of_the_match">Rank of the match</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="guest_rules">"Connecting as a guest in a game, you might lose some of the following benefits: -Access to exclusive content -Saving game progress -Online functionalities like matchmaking with friends and leaderboards -Less advertising -Limited customization options.     "</string>
    <string name="flip">flip</string>
    <string name="number_of_players">Number of players</string>
    <string name="start_balance">Start Balance</string>
    <string name="chose_puddles">Chose Puddles</string>
    <string name="saves">Saves</string>
    <string name="offer">Offer</string>


</resources>